--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n139.ha1f9f09
+   version: 0.2.0-n153.h7db895c
    repository: https://jupyterhub.github.io/helm-chart
