--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-56.g023e577
+      build_image: jupyter/repo2docker:0.11.0-60.g0e9bae8
       build_node_selector:
         user: worker
       per_repo_quota: 100
