--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -42,7 +42,7 @@ persistent_binderhub:
         #    config:
         #      quota: 200
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-60.g0e9bae8
+        build_image: jupyter/repo2docker:0.11.0-63.g8b62249
         build_node_selector:
           user: worker
         per_repo_quota: 100
