--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-63.g8b62249
+      build_image: jupyter/repo2docker:0.11.0-66.gd03c283
       build_node_selector:
         user: worker
       per_repo_quota: 100
