--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n162.h003d856
+   version: 0.2.0-n169.h02ea279
    repository: https://jupyterhub.github.io/helm-chart
