repo2docker: https://github.com/jupyter/repo2docker/compare/a140889...bd72e16

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -42,7 +42,7 @@ persistent_binderhub:
         #    config:
         #      quota: 200
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-70.ga140889
+        build_image: jupyter/repo2docker:0.11.0-72.gbd72e16
         build_node_selector:
           user: worker
         per_repo_quota: 100
