--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n172.h9874c43
+   version: 0.2.0-n175.he98f51d
    repository: https://jupyterhub.github.io/helm-chart
