--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -296,20 +296,21 @@ imageCleaner:
   enabled: false
   image:
     name: gesiscss/orc-image-cleaner
-    tag: 618b48a
+    tag: ecbfb80
   # start deleting images which are not used in x days
   days: 7
   # interval (in seconds) between cleaning processes
-  interval: 1800
+  interval: 300
   # path to check available disk space
   path: /var/lib/docker
   # delete an image at most every 5 seconds
-  delay: 10
-  # start cleaning when 80% of disk is used (available <= 20%)
-  # until it drops below 40% (available >= 60%)
-  highLimit: 80
-  lowLimit: 40
+  delay: 5
+  # start cleaning when available disk space is <= 10%
+  # until it increases to/above 30%
+  highLimit: 90
+  lowLimit: 70
   # cull images on the host docker
   dockerSocket: /var/run/docker.sock
   # dockerLibDir: /var/lib/docker
+  # we clean ~20% -> ~400GB on ssd disk
   dockerLibDir: /ssd/docker
