--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -296,7 +296,7 @@ imageCleaner:
   enabled: false
   image:
     name: gesiscss/orc-image-cleaner
-    tag: d2ed26f
+    tag: dc975e2
   # start deleting images which are not used in x days
   days: 7
   # interval (in seconds) between cleaning processes
@@ -305,13 +305,15 @@ imageCleaner:
   path: /var/lib/docker
   # delete an image at most every 5 seconds
   delay: 5
-  # start cleaning when available disk space is <= 10%
+  # kubelet Garbage Collection: image-gc-high-threshold, the percent of disk usage which triggers image garbage collection. Default is 85%
+  # (https://kubernetes.io/docs/concepts/cluster-administration/kubelet-garbage-collection/#user-configuration)
+  # start cleaning when available disk space is <= 20%
   # until it increases to/above 30%
-  highLimit: 90
+  highLimit: 80
   lowLimit: 70
   # cull images on the host docker
   dockerSocket: /var/run/docker.sock
   # dockerLibDir: /var/lib/docker
-  # we clean ~20% -> ~400GB on ssd disk
+  # we clean ~10% -> ~200GB on ssd disk
   dockerLibDir: /ssd/docker
 
