--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 50
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-87.g8d85a51
+      build_image: jupyter/repo2docker:0.11.0-92.gc925f96
       build_node_selector:
         user: worker
       per_repo_quota: 100
