--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n187.hdb3aa0e
+   version: 0.2.0-n189.h5ece772
    repository: https://jupyterhub.github.io/helm-chart
