--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n192.h900d1d6
+   version: 0.2.0-n193.hfc12027
    repository: https://jupyterhub.github.io/helm-chart
