--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -42,7 +42,7 @@ persistent_binderhub:
         #    config:
         #      quota: 200
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-110.gcb3da62
+        build_image: jupyter/repo2docker:0.11.0-112.g37cee9a
         build_node_selector:
           user: worker
         per_repo_quota: 100
