--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n208.hb81d913
+   version: 0.2.0-n213.hbb8f58f
    repository: https://jupyterhub.github.io/helm-chart
