--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n213.hbb8f58f
+   version: 0.2.0-n215.h9447e17
    repository: https://jupyterhub.github.io/helm-chart
