--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n215.h9447e17
+   version: 0.2.0-n217.h35366ea
    repository: https://jupyterhub.github.io/helm-chart
