--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -42,7 +42,7 @@ persistent_binderhub:
         #    config:
         #      quota: 200
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-138.gf45d84b
+        build_image: jupyter/repo2docker:0.11.0-141.gf0c6f65
         build_node_selector:
           user: worker
         per_repo_quota: 100
