binderhub: https://github.com/jupyterhub/binderhub/compare/35366ea...bc17443

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n217.h35366ea
+   version: 0.2.0-n219.hbc17443
    repository: https://jupyterhub.github.io/helm-chart
