--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 100
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-143.g8fe5916
+      build_image: jupyter/repo2docker:0.11.0-159.g35e6e7e
       build_node_selector:
         user: worker
       per_repo_quota: 100
