set build memory request (1GB) and limit (8GB)

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -57,6 +57,8 @@ binderhub:
         user: worker
       per_repo_quota: 100
       per_repo_quota_higher: 200
+      build_memory_limit: "8G"
+      build_memory_request: "1G"
 
       template_path: /etc/binderhub/templates
       # look at configmap for static files here https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/4?u=bitniks
