--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 100
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-165.gbc9b1ae
+      build_image: jupyter/repo2docker:0.11.0-169.gae6c2dc
       build_node_selector:
         user: worker
       per_repo_quota: 100
