--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n219.hbc17443
+   version: 0.2.0-n221.h1875bcb
    repository: https://jupyterhub.github.io/helm-chart
