--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -41,6 +41,10 @@ persistent_binderhub:
         #  - pattern: ^gesiscss/.*
         #    config:
         #      quota: 200
+      GitRepoProvider:
+        banned_specs:
+          - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
+          - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
       BinderHub:
         build_image: jupyter/repo2docker:0.11.0-169.gae6c2dc
         build_node_selector:
