--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n224.hf5cc56a
+   version: 0.2.0-n228.ha00bbbb
    repository: https://jupyterhub.github.io/helm-chart
