add mridul to gesis hub as admin

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -283,6 +283,7 @@ persistent_binderhub:
           users:
             - kenan.erdogan@gesis.org
             - arnim.bleier@gesis.org
+            - mridul.seth@gesis.org
         state:
           enabled: true
 
