--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -46,7 +46,7 @@ persistent_binderhub:
           - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
           - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-178.g035574b
+        build_image: jupyter/repo2docker:0.11.0-181.g805c555
         build_node_selector:
           user: worker
         per_repo_quota: 100
