--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n242.h87e78af
+   version: 0.2.0-n244.hd6d3e22
    repository: https://jupyterhub.github.io/helm-chart
