binderhub: https://github.com/jupyterhub/binderhub/compare/025ce54...a4908da

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n251.h025ce54
+   version: 0.2.0-n259.ha4908da
    repository: https://jupyterhub.github.io/helm-chart
