--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n259.ha4908da
+   version: 0.2.0-n274.hc69f4c8
    repository: https://jupyterhub.github.io/helm-chart
