binderhub: https://github.com/jupyterhub/binderhub/compare/3187c31...068b631

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n277.h3187c31
+   version: 0.2.0-n287.h068b631
    repository: https://jupyterhub.github.io/helm-chart
