--- a/monitoring/elastic-stack/elastic-stack/Chart.yaml
+++ b/monitoring/elastic-stack/elastic-stack/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for elastic stack
+appVersion: "7.9.3"
+description: This is a helm chart for elasticsearch-logstash-kibana stack
 name: elastic-stack
-version: 0.1.0
+version: 0.2.0
