--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n295.h9e6d009
+   version: 0.2.0-n361.h6f57706
    repository: https://jupyterhub.github.io/helm-chart
