disable logstash and use filebeat directly connected to elasticsearch and use it to collect container logs

--- a/monitoring/elastic-stack/config.yaml
+++ b/monitoring/elastic-stack/config.yaml
@@ -17,7 +17,7 @@ elasticsearch:
 
 logstash:
   # https://github.com/elastic/helm-charts/blob/7.9.3/logstash
-  enabled: true
+  enabled: false
   image: "docker.elastic.co/logstash/logstash-oss"
   resources:
     requests:
@@ -45,17 +45,17 @@ logstash:
     uptime.conf: |
       input { exec { command => "uptime" interval => 30 } }
       output { elasticsearch { hosts => ["http://elasticsearch-master:9200"] index => "logstash" } }
-
-  # we have to mount this for user:worker,
-  # there we have docker data dir not in default path (/var/lib/docker) but under /ssd/docker
-  extraVolumes: |-
-   - name: customvarlibdockercontainers
-     hostPath:
-       path: /ssd/docker/containers
-  extraVolumeMounts: |-
-   - name: customvarlibdockercontainers
-     mountPath: /ssd/docker/containers
-     readOnly: true
+#
+#  # we have to mount this for user:worker,
+#  # there we have docker data dir not in default path (/var/lib/docker) but under /ssd/docker
+#  extraVolumes: |-
+#   - name: customvarlibdockercontainers
+#     hostPath:
+#       path: /ssd/docker/containers
+#  extraVolumeMounts: |-
+#   - name: customvarlibdockercontainers
+#     mountPath: /ssd/docker/containers
+#     readOnly: true
 
 kibana:
   # https://github.com/elastic/helm-charts/tree/7.9.3/kibana
@@ -71,3 +71,28 @@ kibana:
       memory: "4Gi"
   nodeSelector:
     base: worker
+
+filebeat:
+  # https://github.com/elastic/helm-charts/tree/7.9.3/filebeat
+  image: docker.elastic.co/beats/filebeat-oss
+  hostNetworking: true
+
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "100Mi"
+    limits:
+      cpu: "2000m"
+      memory: "400Mi"
+
+  #hostPathRoot: /var/lib
+  # we have to mount this for user:worker,
+  # there we have docker data dir not in default path (/var/lib/docker) but under /ssd/docker
+  extraVolumes:
+   - name: customvarlibdockercontainers
+     hostPath:
+       path: /ssd/docker/containers
+  extraVolumeMounts:
+   - name: customvarlibdockercontainers
+     mountPath: /ssd/docker/containers
+     readOnly: true
